--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -13,17 +13,13 @@ env:
 jobs:
     build_and_test:
       runs-on: ubuntu-latest
-      strategy:
-        fail-fast: false
-        matrix:
-          node-version: [21.x]
       steps:
         - uses: actions/checkout@v3  # Check out your project code
     
-        - name: Use Node.js ${{ matrix.node-version }}  # Setup Node (with matrix support)
+        - name: Use Node.js  # Setup Node (with matrix support)
           uses: actions/setup-node@v3
           with:
-            node-version: ${{ matrix.node-version }}
+            node-version: 21.x
     
         - run: npm ci  # Install dependencies
     
