--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -22,18 +22,31 @@ jobs:
             node-version: 21.x
     
         - run: npm ci  # Install dependencies
-    
+        
+        - name: Check for Test Files
+          id: check-tests
+          run: |
+            if ls src/**/*.test.js 1> /dev/null 2>&1; then
+              echo "Tests found, setting run_tests to true."
+              echo "::set-output name=run_tests::true"
+            else
+              echo "No tests found, setting run_tests to false."
+              echo "::set-output name=run_tests::false"
+            fi
+      
         - name: Check for docker-compose.yml file
           uses: andstor/file-existence-action@v2
           id: check_files
           with:
             files: "docker-compose.yml"
+
         - name: Start test backend
           if: steps.check_files.outputs.files_exists == 'true'
           run: |
             docker compose -f docker-compose.yml up -d
             sleep 5
         - name: Test Project
+          if: steps.check-tests.outputs.run_tests == 'true'
           run: npm test 
         - name: Shoutdown test backend
           if: steps.check_files.outputs.files_exists == 'true' &&  (success() || failure())
