--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,7 +26,7 @@ jobs:
         - name: Check for Test Files
           id: check-tests
           run: |
-            if ls test/**/*.test.js 1> /dev/null 2>&1; then
+            if ls test/**/*.test.js > /dev/null 2>&1; then
               echo "Tests found, setting run_tests to true."
               echo "::set-output name=run_tests::true"
             else
