--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,12 +26,15 @@ jobs:
         - name: Check for Test Files
           id: check-tests
           run: |
-            if ls test/**/*.test.js > /dev/null 2>&1; then
-              echo "Tests found, setting run_tests to true."
-              echo "::set-output name=run_tests::true"
+            if [ -d test ] && (
+                ls test/*.test.js >/dev/null 2>&1 || 
+                ls test/**/*.test.js >/dev/null 2>&1
+                ); then
+                echo "Tests found, setting run_tests to true."
+                echo "::set-output name=run_tests::true"
             else
-              echo "No tests found, setting run_tests to false."
-              echo "::set-output name=run_tests::false"
+                echo "No tests found, setting run_tests to false."
+                echo "::set-output name=run_tests::false"
             fi
       
         - name: Check for docker-compose.yml file
