--- a/.github/workflows/build-test-create.yml
+++ b/.github/workflows/build-test-create.yml
@@ -31,12 +31,11 @@ jobs:
                 ls test/**/*.test.js >/dev/null 2>&1
                 ); then
                 echo "Tests found, setting run_tests to true."
-                echo "::set-output name=run_tests::true"
+                echo "RUN_TESTS=true" >> $GITHUB_ENV
             else
                 echo "No tests found, setting run_tests to false."
-                echo "::set-output name=run_tests::false"
+                echo "RUN_TESTS=false" >> $GITHUB_ENV
             fi
-        
          
         - name: Check for docker-compose.yml file
           uses: andstor/file-existence-action@v2
@@ -51,7 +50,7 @@ jobs:
             sleep 5
 
         - name: Test Project
-          if: steps.check-tests.outputs.run_tests == 'true'
+          if: env.RUN_TESTS == 'true'
           run: npm test 
 
         - name: Shoutdown test backend
@@ -59,7 +58,7 @@ jobs:
           run: |
             docker compose -f docker-compose.yml logs
             docker compose -f docker-compose.yml down -v
-            
+
     build-docker-images:
       name: Build and Publish Docker Image
       runs-on: ubuntu-latest
